2002-04-25 09:12 pate

	* output.t, testKoha.pl: added tests for Output.pm (nearing
	complete coverage)

	* C4/Output.pm: added prototyping where possible, cleaned up some
	compiler warnings

2002-04-25 06:57  pate   

	* koha.t: added fixEthnicity tests

2002-04-17 14:35  pate

	* C4/Koha.pm: starting to move ethnicity stuff out of programs and
	into modules

2002-04-17 13:28  rangi

	* installer.pl: Submitting on behalf of Nicholas First cut (not
	functional yet) of an installer script

2002-04-16 12:49  tonnesen

	* acqui.simple/bulkmarcimport.pl: Added some comments detailing how
	MARC fields are mapped to Koha data

2002-04-16 11:00  tonnesen

	* acqui.simple/bulkmarcimport.pl: Fixed typo

2002-04-16 10:37  tonnesen

	* acqui.simple/bulkmarcimport.pl: This is my bulk MARC record
	importing tool.  Feel free to test it out, but DO NOT use it on a
	production system yet!	It needs to be more adaptable to different
	MARC implementations.
	
	Note that the script will spit out a plain text copy of the records
	being imported to STDOUT, so you will probably want to redirect to
	a file, or pipe to less.

2002-04-15 09:17  pate

	* moremember.pl: moved ethnicity fixups into C4::Koha, eventually
	to be replaced with a better (non-NZ specific) solution.

2002-04-15 09:15  pate

	* C4/Koha.pm: moved ethnicity fixing out of moremember.pl into a
	function, eventually to replace with a more configurable version
	(non-NZ specific)

2002-04-14 22:33  truth_nz

	* updatebibitem.pl, C4/Acquisitions.pm, acqui/addorder.pl:
	Acquisitions::newbiblioitem updated to be usable for new
	acqui.simple addorder.pl and updatebibitem.pl modified to use new
	newbiblioitem

2002-04-10 02:55  rangi

	* C4/Search.pm: Fixing the subject search i broke ;)

2002-04-10 00:59  rangi

	* C4/Search.pm: Working on a fix to speed up title and author
	searches

2002-04-09 22:49  truth_nz

	* C4/Acquisitions.pm: Altered newbiblio to be more generic - so can