@@ -4,7 +4,8 @@
 	complete coverage)
 
 	* C4/Output.pm: added prototyping where possible, cleaned up some
-	compiler warnings
+	compiler warnings, found and fixed an error in mkformnotable while
+	adding tests
 
 2002-04-25 06:57  pate   
 
